@@ -1,3 +1,10 @@
+2006-07-19  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-toc-pager.c:
+	Select the correct translation of the description of sections
+	Fixes bug #347816
+	Clean up a couple of compiler warnings
+
 2006-07-10  Brent Smith  <gnome@nextreality.net>
 
 	* NEWS:
